...
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_margin="1dp"/>
                <RelativeLayout
                    android:id="@+id/friday"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_margin="1dp"/>
                <RelativeLayout
...
